# ConsoleForwarder

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.bat
src/: args.cpp  args.h  conpty.cpp  conpty.h  console_hook.cpp  injector.cpp  injector.h  legacy_console.cpp  legacy_console.h  main.cpp
